<resources>
    <string name="app_name">ParcelDrop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_title">ParcelDrop</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyAqS_sIU8n-RtUIoEJPaFft-GcC0tuwiVU</string>
    <string name="search_address">Search address...</string>
    <string name="invalid_search">Please enter a valid search input</string>
    <string name="error_no_location">Please turn on location services</string>
    <string name="location_alert_title">Turn on location</string>
    <string name="location_alert_message">Would you like to go to settings page now?</string>
    <string name="current_location">Current Location</string>
    <string name="error_max_addresses">You can add up to %1d address only</string>
    <string name="no_such_place">No such place found</string>
    <string name="select_this_address_pickup">Select this address as pickup point</string>
    <string name="select_this_address_drop">Select this address as drop point</string>
    <string name="no_favorite_addresses">Add some favorite addresses...</string>
    <string name="pickup_info_window_snippet">Click to set as pickup point</string>
    <string name="drop_info_window_snippet">Click to set as drop point</string>
    <string name="drop_title">Set as drop point?</string>
    <string name="pickup_title">Set as Pickup point?</string>
    <string name="pickup_text_title">Search a pickup point for your parcel..</string>
    <string name="drop_text_title">Search a drop point for your parcel..</string>
    <string name="route_text_title">Press >> to set pickup details</string>
    <string name="marker_click">Click on the marker</string>
    <string name="same_day">SAME DAY</string>
    <string name="standard">STANDARD</string>
    <string name="flexible">FLEXIBLE</string>
    <string name="weight_string">Weight:</string>
    <string name="distance_string">Distance:</string>
    <string name="enter_weight_in_grams">Enter weight(g)</string>
    <string name="order_details">Order Details ></string>
    <string name="confirm">Confirm</string>
    <string name="thank_you">Thank You!</string>
    <string name="other">Other</string>
    <string name="food_item">Food Item</string>
    <string name="documents">Documents</string>
    <string name="default_weight">100</string>
    <string name="enter_parcel_weight">Please enter weight of parcel</string>
    <string name="delivery_mode_selected_as">"Delivery mode selected as "</string>
    <string name="parcel_type_selected_as">"Parcel Type selected as "</string>
    <string name="fee_rs">\n Fee: Rs.</string>
    <string name="cost_rs">Cost: Rs.</string>
    <string name="ensure_correct_types">Make sure you have selected delivery method and payment type</string>
    <string name="pickup">"Pickup: "</string>
    <string name="drop">"Drop: "</string>
    <string name="km">km</string>
    <string name="distance">Distance</string>
    <string name="drop_extra">Drop</string>
    <string name="pickup_extra">Pickup</string>
    <string name="order_confirm">Order confirmation</string>
    <string name="confirm_order">Confirm order?</string>
    <string name="choose_delivery_method">Please select a delivery method</string>
    <string name="without_delivery_and_parcel_charges">(Without delivery and parcel charges)</string>
    <string name="server_down">Sorry our servers are down at the moment!</string>
    <string name="drop_pickup_cant_same">Drop location can\'t be same as pickup location</string>
    <string name="no_place">No such place found</string>
    <string name="order_confirmed_msg">Your order has been confirmed!</string>
    <string name="choose_parcel_type">Please select type of parcel item</string>
    <string name="bg_task">Background Task</string>
</resources>
